batchJobs/cvproject_31596.err
The following values were not passed to `accelerate launch` and had defaults used instead:
		More than one GPU was found, enabling multi-GPU training.
		If this was unintended please pass in `--num_processes=1`.
	`--num_machines` was set to a value of `1`
	`--mixed_precision` was set to a value of `'no'`
	`--dynamo_backend` was set to a value of `'no'`
To avoid this warning pass in values for each of the problematic parameters or run `accelerate config`.
  File "/scratch/sc9960/cv_project/g3-variant/g3-gg/run_G3.py", line 112
    <<<<<<< Updated upstream
    ^
SyntaxError: invalid syntax
  File "/scratch/sc9960/cv_project/g3-variant/g3-gg/run_G3.py", line 112
    <<<<<<< Updated upstream
    ^
SyntaxError: invalid syntax
  File "/scratch/sc9960/cv_project/g3-variant/g3-gg/run_G3.py", line 112
    <<<<<<< Updated upstream
  File "/scratch/sc9960/cv_project/g3-variant/g3-gg/run_G3.py", line 112
    ^
    <<<<<<< Updated upstream
SyntaxError    : ^
invalid syntaxSyntaxError
: invalid syntax
[2024-12-18 19:33:12,699] torch.distributed.elastic.multiprocessing.api: [ERROR] failed (exitcode: 1) local_rank: 0 (pid: 5577) of binary: /ext3/miniforge3/bin/python3.9
Traceback (most recent call last):
  File "/ext3/miniforge3/bin/accelerate", line 8, in <module>
    sys.exit(main())
  File "/ext3/miniforge3/lib/python3.9/site-packages/accelerate/commands/accelerate_cli.py", line 48, in main
    args.func(args)
  File "/ext3/miniforge3/lib/python3.9/site-packages/accelerate/commands/launch.py", line 1159, in launch_command
    multi_gpu_launcher(args)
  File "/ext3/miniforge3/lib/python3.9/site-packages/accelerate/commands/launch.py", line 793, in multi_gpu_launcher
    distrib_run.run(args)
  File "/ext3/miniforge3/lib/python3.9/site-packages/torch/distributed/run.py", line 797, in run
    elastic_launch(
  File "/ext3/miniforge3/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 134, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/ext3/miniforge3/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 264, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
run_G3.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2024-12-18_19:33:12
  host      : b-21-4.c.hpc-slurm-9c75.internal
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 5578)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2024-12-18_19:33:12
  host      : b-21-4.c.hpc-slurm-9c75.internal
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 5579)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2024-12-18_19:33:12
  host      : b-21-4.c.hpc-slurm-9c75.internal
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 5580)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2024-12-18_19:33:12
  host      : b-21-4.c.hpc-slurm-9c75.internal
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 5577)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
